--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,12 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnpm-debug.log*
+.yarn*
+
+# Build output
 dist
 dist-ssr
-*.local
+.next
+out
 
-# Editor directories and files
+# Editor / OS
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,24 +29,7 @@ dist-ssr
 *.sln
 *.sw?
 
-# dependencies
-node_modules
-.pnpm-debug.log*
-.yarn*
-package-lock.json
-pnpm-lock.yaml
-
-# build output
-dist
-.next
-out
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
+# Env files (keep these local only)
 .env
 .env.local
 .env.*.local
